[package]
name = "pyfast"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyfast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version="0.20.0" , features = ["tokio-runtime"] }
pyo3-log = "0.8.4"
redis = "*"
yaml-rust = "0.4"
regex = "1.10.6"
serde = "1.0.187"
serde_json = "1.0.109"
uuid = {version = "*", features = ["v4"]}
tokio = "1.9"
once_cell = "1.8"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[package.metadata.maturin]
name = "pyfast"
