[package]
name = "hypern"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hypern"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version="0.20.0" , features = ["tokio-runtime"] }
pyo3-log = "0.8.4"
redis = "*"
yaml-rust = "0.4"
regex = "1.10.6"
serde = "1.0.187"
serde_json = "1.0.109"
uuid = {version = "*", features = ["v4"]}
tokio = "1.9"
once_cell = "1.8"
chrono = "0.4.38"
chrono-tz = "0.10.0"
cron = "0.13.0"
axum = {version = "0.7.7", features = ["multipart", "json", "query", "tokio", "http2"]}
dashmap = "5.4.3"
parking_lot = "0.12.3"
socket2 = { version = "0.5.1", features = ["all"] }
tempfile = "3.14.0"

tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[package.metadata.maturin]
name = "hypern"
