[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
    tox>=4.2
env_list =
    fix
    format
    py{310}

[testenv:fix]
description = run static analysis and style check using flake8
skip_install = true
deps =
    pre-commit>=3.6
pass_env =
    HOMEPATH
    PROGRAMDATA
commands =
    pre-commit run --all-files --show-diff-on-failure

[testenv:format]
description = install black in a virtual environment and invoke it on the current folder
skip_install = true
deps =
    black==22.12
commands =
    black {posargs:.}
"""
