
[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyfast"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyfast"

[tool.poetry]
name = "pyfast"
version = "1.0.0"
description = "A Fast Async Python backend with a Rust runtime."
authors = ["Martin Dang <vannghiem848@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
robyn = "^0.58.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
pydantic = "^2.8.2"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
pydash = "^8.0.3"
sentry-sdk = "^2.11.0"
pydantic-settings = "^2.3.4"
celery = "^5.4.0"
asgiref = "^3.8.1"

[tool.poetry.group.test.dependencies]
pytest = "7.2.1"
pytest-codspeed = "1.2.2"
requests = "2.32.2"
nox = "2023.4.22"
websocket-client = "1.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.3"
black = "23.1"
isort = "5.11.5"
pre-commit = "2.21.0"
commitizen = "2.40"

[tool.ruff]
line-length = 160
exclude = ["src/*", ".git", "docs"]

[tool.ruff.mccabe]
max-complexity = 10