
[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hypern"
version = "0.3.4"
description = "A Fast Async Python backend with a Rust runtime."
authors = [{ name = "Martin Dang", email = "vannghiem848@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies=[
    "sqlalchemy[asyncio] == 2.0.31",
    "pydantic[email]==2.8.2",
    "passlib==1.7.4",
    "pyjwt==2.8.0",
    "pydash==8.0.3",
    "sentry-sdk==2.11.0",
    "pydantic-settings==2.3.4",
    "celery==5.4.0",
    "asgiref==3.8.1",
    "psycopg==3.2.3",
    "pyyaml == 6.0.2",
    "mongoengine==0.29.1",
    "argon2-cffi==23.1.0",
    "bcrypt==4.2.0",
    "orjson==3.10.11",
    "multiprocess==0.70.17",
    "uvloop==0.21.0; sys_platform != 'win32' and platform_python_implementation == 'CPython' and platform_machine != 'armv7l'",
    "cryptography==43.0.3",
    "watchdog==6.0.0",
    "jsonschema==4.23.0",
    "psutil==6.1.0",
]
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hypern"

[tool.poetry]
name = "hypern"
version = "0.3.4"
description = "A Fast Async Python backend with a Rust runtime."
authors = ["Martin Dang <vannghiem848@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
pydantic = {extras = ["email"], version = "^2.9.2"}
passlib = "^1.7.4"
pyjwt = "^2.8.0"
pydash = "^8.0.3"
sentry-sdk = "^2.11.0"
pydantic-settings = "^2.3.4"
celery = "^5.4.0"
asgiref = "^3.8.1"
psycopg = "^3.2.3"
maturin = "^1.7.4"
pyyaml = "^6.0.2"
mongoengine = "^0.29.1"
argon2-cffi = "^23.1.0"
bcrypt = "^4.2.0"
orjson = "^3.10.11"
multiprocess = "^0.70.17"
uvloop = { version = "^0.21.0", markers = "sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')" }
cryptography = "^43.0.3"
watchdog = "^6.0.0"
aiohttp = "^3.11.10"
jsonschema = "^4.23.0"
psutil = "^6.1.0"

[tool.poetry.group.test.dependencies]
pytest = "7.2.1"
requests = "2.32.2"
nox = "2023.4.22"
websocket-client = "1.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.3"
black = "24.3.0"
isort = "5.11.5"
pre-commit = "2.21.0"
commitizen = "2.40"
pytest-codspeed = "^2.2.1"
bandit = "^1.7.10"

[tool.ruff]
line-length = 160
exclude = ["src/*", ".git", "docs"]

[tool.ruff.mccabe]
max-complexity = 10